added event api and event admin page

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,17 @@ beautifulsoup4==4.6.0
 certifi==2018.11.29
 chardet==3.0.4
 Django==2.1.7
+django-filter==2.1.0
 django-modelcluster==4.3
 django-taggit==0.23.0
 django-treebeard==4.3
 djangorestframework==3.9.1
 draftjs-exporter==2.1.5
+feedparser==5.2.1
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
+Markdown==3.1
 Pillow==5.4.1
 pkg-resources==0.0.0
 pytz==2018.9
