updated the requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.6.0
 certifi==2018.11.29
 chardet==3.0.4
 Django==2.1.7
+-e git+https://github.com/jazzband/django-debug-toolbar.git@475d9d5c161e35418e339e269ab8f8333bab504c#egg=django_debug_toolbar
 django-filter==2.1.0
 django-modelcluster==4.3
 django-taggit==0.23.0
@@ -18,6 +19,7 @@ pkg-resources==0.0.0
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
+sqlparse==0.3.0
 Unidecode==1.0.23
 urllib3==1.24.1
 wagtail==2.4
