--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /venv
 *.sock
-/csforsac/home/migrations/*
-/csforsac/events/migrations/*
-/csforsac/blog/migrations/*
+#/csforsac/home/migrations/*
+#/csforsac/events/migrations/*
+#/csforsac/blog/migrations/*
 # Created by https://www.gitignore.io
 
 ### OSX ###
