--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ chardet==3.0.4
 Django==2.1.7
 -e git+https://github.com/jazzband/django-debug-toolbar.git@475d9d5c161e35418e339e269ab8f8333bab504c#egg=django_debug_toolbar
 django-filter==2.1.0
+django-geoposition==0.3.0
+django-google-maps==0.10.1
 django-modelcluster==4.3
 django-taggit==0.23.0
 django-treebeard==4.3
