--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@
 /csforsac/adapt/migrations/*
 /csforsac/streams/migrations/*
 
+#don't ignore these files
+!/csforsac/home/migrations/__init__.py
+!/csforsac/events/migrations/__init__.py
+!/csforsac/blog/migrations/__init__.py
+!/csforsac/adapt/migrations/__init__.py
+!/csforsac/streams/migrations/__init__.py
+
+# ...even if they are in subdirectories
+
 ### OSX ###
 .DS_Store
 .AppleDouble
