--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /csforsac/blog/migrations/*
 /csforsac/adapt/migrations/*
 /csforsac/streams/migrations/*
+/csforsac/blog/migrations/__init__.py
+/csforsac/events/migrations/__init__.py
+/csforsac/home/migrations/__init__.py
+
 
 #don't ignore these files
 !/csforsac/home/migrations/__init__.py
